changed image names

--- a/config/rss.conf
+++ b/config/rss.conf
@@ -2,14 +2,13 @@ http://www.ilgiornale.it/feed.xml --- ilgiornale.it
 http://feeds.huffingtonpost.com/huffingtonpost/raw_feed --- huffingtonpost.com
 http://www.gazzetta.it/rss/home.xml --- gazzetta.it
 http://xml.corriereobjects.it/rss/homepage.xml --- corriere.it
-http://www.theguardian.com/world/rss --- theguardian.com
 http://www.telegraph.co.uk/news/worldnews/rss --- telegraph.co.uk/news
 http://www.telegraph.co.uk/finance/rss --- telegraph.co.uk/finance
 http://www.telegraph.co.uk/sport/rss --- telegraph.co.uk/sport
 http://www.telegraph.co.uk/news/celebritynews/rss --- telegraph.co.uk/news/celebritynews
 http://www.bild.de/rssfeeds/vw-home/vw-home-16725562,sort=1,view=rss2.bild.xml --- bild.de
-http://syndication.lesechos.fr/rss/Echos_monde.xml --- lesechos.fr
-http://syndication.lesechos.fr/rss/rss_tech_medias.xml --- lesechos.fr
+http://syndication.lesechos.fr/rss/Echos_monde.xml --- lesechos.fr/monde
+http://syndication.lesechos.fr/rss/rss_tech_medias.xml --- lesechos.fr/tech
 http://feeds.feedburner.com/readwriteweb --- readwrite.com
 http://feeds.feedburner.com/Mashable?format=xml --- mashable.com
 http://feeds.feedburner.com/boingboing/ibag --- boingboing.net
