added crawler testing, reorganized code to make it more decoupled

--- a/config/rss.conf
+++ b/config/rss.conf
@@ -12,3 +12,8 @@ http://syndication.lesechos.fr/rss/rss_tech_medias.xml --- lesechos.fr/tech
 http://feeds.feedburner.com/readwriteweb --- readwrite.com
 http://feeds.feedburner.com/Mashable?format=xml --- mashable.com
 http://feeds.feedburner.com/boingboing/ibag --- boingboing.net
+http://www.lifehack.org/feed	--- lifehack.org
+http://www.dailyhaha.com/rss/pictures/ --- dailyhaha.com
+http://www.buzzfeed.com/index.xml --- buzzfeed.com
+http://www.buzzfeed.com/community/justlaunched.xml --- buzzfeed.com/justlaunched
+http://feeds.feedburner.com/DamnLOL --- damnlol.com
